test/bad/fieldstatic/AssignPrimitiveFromObject.para
public class AssignPrimitiveFromObject {
  private Object x;
  private int y = x;
}
